--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "db:migrate": "npx prisma migrate dev --name note-entity --create-only && yarn prisma generate",
+    "db:push": "npx prisma db push"
   },
   "dependencies": {
+    "@prisma/client": "^4.10.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -16,6 +19,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "prisma": "^4.10.1",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
