--- a/package.json
+++ b/package.json
@@ -8,19 +8,42 @@
     "db:push": "npx prisma db push"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@prisma/client": "^4.10.1",
+    "@tanstack/react-query": "^4.24.6",
+    "@tanstack/react-query-devtools": "^4.24.6",
+    "@trpc/client": "10.11.1",
+    "@trpc/next": "10.11.1",
+    "@trpc/react-query": "10.11.1",
+    "@trpc/server": "10.11.1",
+    "date-fns": "^2.29.3",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.1",
+    "react-toastify": "^9.1.1",
+    "superjson": "^1.12.2",
+    "tailwind-merge": "^1.9.1",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
-    "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "18.13.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-sort-keys-custom-order": "^1.0.5",
+    "eslint-plugin-tailwindcss": "^3.8.3",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
     "prisma": "^4.10.1",
-    "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "tailwindcss": "^3.2.6",
+    "typescript": "4.9.5"
   }
 }
