--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "db:migrate": "npx prisma migrate dev --name note-entity --create-only && yarn prisma generate",
-    "db:push": "npx prisma db push"
+    "db:push": "npx prisma db push",
+    "postinstall": "prisma db push && prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
